@@ -3,29 +3,33 @@ package com.backend.wear.config.jwt;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.Customizer;
+import org.springframework.core.Ordered;
+import org.springframework.core.annotation.Order;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
+
 
 @Configuration
 @EnableWebSecurity
-//@RequiredArgsConstructor
 public class SecurityConfig  {
     private final CustomUserDetailsService customUserDetailsService;
     private final JwtUtil jwtUtil;
     private final CustomAccessDeniedHandler accessDeniedHandler;
     private final CustomAuthenticationEntryPoint authenticationEntryPoint;
+    private org.springframework.core.Ordered Ordered;
 
     @Autowired
     public SecurityConfig(CustomUserDetailsService customUserDetailsService, JwtUtil jwtUtil,
@@ -38,15 +42,12 @@ public class SecurityConfig  {
 
     // 인가가 필요하지 않는 경로
     private static final String[] AUTH_WHITELIST = {
-            "/api/upload/**", "/api/products/category/**", "/api/products/search/category/**", "/api/products/search/rank/**",
-            "/api/test","/ws-stomp/**",
-            "/api/university/**","/api/auth/**","/api/token/**",
+            "/api/upload","/api/upload/**",
+            "/api/products/category/**", "/api/products/search/category/**", "/api/products/search/rank/**",
+            "/test","/ws-stomp/**",
+            "/api/university/**","/api/auth/**",
             "/v3/api-docs/**", "/api-docs/**", "/swagger-ui/**"
         };
-//    private static final String[] AUTH_WHITELIST = {
-//            "/**",
-//            "/v3/api-docs/**", "/api-docs/**", "/swagger-ui/**"
-//    };
 
     // 비밀번호 암호화
     @Bean
@@ -57,7 +58,14 @@ public class SecurityConfig  {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws  Exception{
         // CSRF
-        http.csrf((csrf) -> csrf.disable());
+        http.csrf(csrf -> csrf
+                .ignoringRequestMatchers(
+                        new AntPathRequestMatcher("/api/upload"), // 단일 엔드포인트에 대해 예외 처리
+                        new AntPathRequestMatcher("/api/upload/**") // 경로 패턴에 대해 예외 처리
+                )
+                .csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse())
+                .disable()
+        );
 
         // CORS
         http.cors(httpSecurityCorsConfigurer ->
@@ -69,8 +77,8 @@ public class SecurityConfig  {
                 SessionCreationPolicy.STATELESS));
 
         //FormLogin, BasicHttp 비활성화
-        http.formLogin((form) -> form.disable());
-        http.httpBasic(AbstractHttpConfigurer::disable);
+     //   http.formLogin((form) -> form.disable());
+     //   http.httpBasic(AbstractHttpConfigurer::disable);
 
         //JwtAuthFilter를 UsernamePasswordAuthenticationFilter 앞에 추가
         http.addFilterBefore(new JwtAuthFilter(customUserDetailsService, jwtUtil), UsernamePasswordAuthenticationFilter.class);
@@ -83,8 +91,8 @@ public class SecurityConfig  {
         // 권한 규칙 작성
         http.authorizeHttpRequests(authorize -> authorize
                         .requestMatchers(AUTH_WHITELIST).permitAll()
-             //           .anyRequest().permitAll()
-                        .anyRequest().authenticated()
+                        .anyRequest().permitAll()
+            //            .anyRequest().authenticated()
         );
 
         return http.build();
@@ -94,18 +102,24 @@ public class SecurityConfig  {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration corsConfiguration = new CorsConfiguration();
 
-//        corsConfiguration.setAllowedOriginPatterns(List.of("http://localhost:8080",  "http://localhost:5173",
-//                "http://43.201.189.171:8080", "http://wear-frontend.s3-website.ap-northeast-2.amazonaws.com"
-//        ));
+        corsConfiguration.setAllowedOriginPatterns(List.of("http://localhost:8080",  "http://localhost:5173",
+                "http://43.201.189.171:8080", "http://wear-frontend.s3-website.ap-northeast-2.amazonaws.com"
+        ));
 
-        corsConfiguration.setAllowedOriginPatterns(List.of("*"));
+        //허용할 헤더 설정
+        corsConfiguration.addAllowedHeader("*");
 
-        corsConfiguration.setAllowedMethods(List.of("*"));
-        corsConfiguration.setAllowedHeaders(List.of("*"));
+        //허용할 http method
+        corsConfiguration.addAllowedMethod("*");
+
+        // 클라이언트가 접근 할 수 있는 서버 응답 헤더
+        corsConfiguration.setExposedHeaders(Arrays.asList("Authorization", "Authorization-Refresh", "files"));
+
+        //사용자 자격 증명이 지원되는지 여부
         corsConfiguration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", corsConfiguration); // 모든 경로에 대해서 CORS 설정을 적용
+        source.registerCorsConfiguration("/**", corsConfiguration);
 
         return source;
     }
